--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage" : "https://DevNeoLee.github.io/pani-frontend-pricingscheme"
 }
